fix sq issues